Basic router support

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html class="min-h-full" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,9 +8,9 @@
     <title>Tauri + Solid + Typescript App</title>
   </head>
 
-  <body>
+  <body class="min-w-full min-h-full mocha bg-base text-text">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="min-h-full" id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
